# Python-WEB-8

./: authors.json  config.ini  connect.py  create.py  pyproject.toml  qoutes.json  read.py  seeds.py  test_models.py
engine/: models.py  read.py  update.py
