[tool.poetry]
name = "python-web-8"
version = "0.1.0"
description = ""
authors = ["Ruslan2512 <ruslansirenko25@gmail.com>"]
readme = "README.md"
packages = [{include = "python_web_8"}]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^4.3.3"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
